# rpg-framework

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
src/: Application.cpp  Application.h  main.cpp
